--- a/.gitattributes
+++ b/.gitattributes
@@ -1,24 +1,21 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-# Ignore specific languages from GitHub language statistics
+# Exclude C and C++ source files
+*.c linguist-vendored
+*.h linguist-vendored
+*.cpp linguist-vendored
+*.cc linguist-vendored
+*.cxx linguist-vendored
+*.hpp linguist-vendored
+*.hh linguist-vendored
+*.hxx linguist-vendored
 
-# Mark C++ files as linguist-generated
-*.cpp linguist-generated=true
-*.hpp linguist-generated=true
-*.cc linguist-generated=true
-*.cxx linguist-generated=true
-*.hxx linguist-generated=true
-*.h   linguist-generated=true
+# Exclude ShaderLab files
+*.shader linguist-vendored
 
-# Mark C files as linguist-generated
-*.c   linguist-generated=true
+# Exclude HLSL files
+*.hlsl linguist-vendored
+*.cginc linguist-vendored
 
-# Mark ShaderLab and HLSL files as linguist-generated
-*.shader linguist-generated=true
-*.cginc  linguist-generated=true
-*.hlsl   linguist-generated=true
-*.glsl   linguist-generated=true
-
-# Mark GAP files as linguist-generated
-*.g     linguist-generated=true
-*.gap   linguist-generated=true
+# Exclude GAP files
+*.g linguist-vendored
